[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.80", features = [ "serde-serialize" ] }
common = { path = "../common" }
js-sys = "0.3.57"
wasm-bindgen-futures = "0.4.30"

[dependencies.web-sys]
version = "0.3.57"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',

    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
]
