[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.17.0", features = [ "full" ] }
axum = { version = "0.5.1", features = [ "json" ] }
common = { path = "../common" }
tower-http = { version = "0.2.5", features = ["fs"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


